# ESP_WebConfig_V1.1.3

./: .gitignore  .tags1  Page_General.h  Procitaj.txt  README.md  platformio.ini
lib/Arduino-Temperature-Control-Library-master/examples/Tester/: Tester.pde
lib/Arduino-Temperature-Control-Library-master/examples/WaitForConversion2/: WaitForConversion2.pde
lib/BlinkPattern-master/: CMakeLists.txt  LICENSE  README.md  main.cpp
lib/BlinkPattern-master/Example/: BlinkPatternTicker.h
lib/BlinkPattern-master/lib/: BlinkPattern.cpp  BlinkPattern.h
lib/Bounce2/: Bouncemix.cpp  Bouncemix.h  bouncemixtest.h
lib/Bounce20/: Bounce2.h
lib/ESP_WebConfig_V1.1.3/: Config.h  Page_Admin.h  Page_General-Basic.h  Page_General.h  Page_NTPSettings.h  Page_applSettings.h  Setup_Server.h  global.h  helpers.h  powerregulation.h
lib/HTTPSRedirect/: HTTPSRedirect.cpp  HTTPSRedirect.h  HTTPSredirecttest.h
lib/I2CDallas/: I2CDallas.h
lib/IFTTTwebhooks/: IFTTTwebhooks.cpp  IFTTTwebhooks.h
lib/LIB/: DS3231use.h  IFTTT.h
src/: ESP_WebConfig_Master.cpp  local.h.example  update.txt
